corpus/c/macro_include/case-12/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.c:9:12: error: [macro_include] error surfaced through macro/include context
help: inspect the user-owned macro invocation or include edge that reaches the failing line
from: invocation of 'OUTER_ACCESS' @ src/main.c:9:12
via : src/config.h:2:29 in expansion of macro 'INNER_ACCESS'
| src/main.c:9:12
|     return OUTER_ACCESS(counter);
|            ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output